sjengida/g3/std_eval
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/std_eval/src/neval.c:1006:67: error: use of undeclared identifier 'xmmword_4251B0'
*( __m128i *)black_back_pawn = _mm_load_si128( ( const __m128i *)&xmmword_4251B0); 
                                                                  ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/std_eval/src/neval.c:1008:12: error: expected expression
*( _OWORD *)&black_back_pawn[4] = *( _OWORD *)black_back_pawn; 
           ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/std_eval/src/neval.c:1008:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&black_back_pawn[4] = *( _OWORD *)black_back_pawn; 
   ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/std_eval/src/neval.c:1008:46: error: expected expression
*( _OWORD *)&black_back_pawn[4] = *( _OWORD *)black_back_pawn; 
                                             ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/std_eval/src/neval.c:1008:38: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&black_back_pawn[4] = *( _OWORD *)black_back_pawn; 
                                     ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/std_eval/src/neval.c:1010:67: error: use of undeclared identifier 'xmmword_4251A0'
*( __m128i *)white_back_pawn = _mm_load_si128( ( const __m128i *)&xmmword_4251A0); 
                                                                  ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/std_eval/src/neval.c:1015:12: error: expected expression
*( _OWORD *)&white_back_pawn[4] = *( _OWORD *)white_back_pawn; 
           ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/std_eval/src/neval.c:1015:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&white_back_pawn[4] = *( _OWORD *)white_back_pawn; 
   ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/std_eval/src/neval.c:1015:46: error: expected expression
*( _OWORD *)&white_back_pawn[4] = *( _OWORD *)white_back_pawn; 
                                             ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/std_eval/src/neval.c:1015:38: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&white_back_pawn[4] = *( _OWORD *)white_back_pawn; 
                                     ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/std_eval/src/neval.c:1016:106: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
*( _QWORD *)king_locs = _mm_unpacklo_epi32( _mm_cvtsi32_si128( wking_loc), _mm_cvtsi32_si128( bking_loc)).m128i_u64[0]; 
                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
11 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/std_eval/src/obj/neval.o] Error 1
